syntax = "proto3";

package userPreference;

service UserPreferenceGrpcService{
	rpc GetById(GetByIdRequest) returns (GetUserPreferenceByIdResult);
}

message GetByIdRequest{
	string Id = 1;
}
message GetUserPreferenceByIdResult{
	UserPreferenceResponse UserPreferenceDto = 1;
}
message UserPreferenceResponse{
	string Id = 1;
	string UserId = 2;
	string Preference = 3;
}
